--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
     <link rel="stylesheet" href="/css/styles.css" />
 </head>
-<body class="color-sec p-0 m-0">
+<body class="d-flex flex-column min-vh-100 justify-content-between align-items-center color-sec">
     <header class="fixed w-100">
         <nav class="navbar navbar-expand-lg navbar-dark color">
             <div class="container-fluid text-center">
