--- a/pages/about.html
+++ b/pages/about.html
@@ -115,81 +115,48 @@
 </div>
 <div class="container mt-2"><h3 class="text-danger">Conoce nuestro Equipo:</h3></div>
       <!-- tarjetas de presentacion -->
-         <div class="container pe-2">
-    <div class="row">
-      <div class="col-md-4 p-0 ps-1">
-        <div class="custom-card m-0">
-          <div class="card">
-            <div class="mt-3">
-              <img src="/assets/perfil (2).jpeg" class="card-img" alt="...">
+      <div class="row row-cols-1 row-cols-md-4 g-4 container-fluid justify-content-center align-items-center">
+  <div class="col">
+    <div class="card h-100 d-flex align-items-center">
+      <img src="/assets/perfil (2).jpeg" class="card-img img-fluid" alt="...">
       <div class="card-body">
-         <div class="card-img-overlay p-0 ms-3">
-        <h3 class="card-title text-center">Leonel Sanagua</h3>
-        <h5 class="text-center">Co Fundador y Desarrollador</h5>
-      </div></div>
-            </div>
-            <div class="card-back">
-              <div class="card-body">
-                <h5 class="card-title text-end">Leonel Sanagua</h5>
-                <p class="card-text text-end fs-6">Lorem ipsum dolor sit ame quam quod fugit illo corrupti facilis amet harum, assumenda, commodi enim aut quidem tempora in sunt?.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4 p-0 ps-1">
-        <div class="custom-card m-0">
-          <div class="card">
-            <div class="">
-              <img src="/assets/perfil (3).jpeg" class="card-img" alt="...">
-      <div class="card-body">
-         <div class="card-img-overlay p-0 ms-3">
-        <h3 class="card-title">Franco Garcia</h3>
-        <h5 class="">Co Fundador y Desarrollador</h5>
-      </div></div>
-            </div>
-            <div class="card-back">
-              <div class="card-body">
-                <h5 class="card-title">Detalles 2</h5>
-                <p class="card-text">Detalles adicionales de la tarjeta 2.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4 p-0 ps-1">
-         <div class="custom-card m-0">
-          <div class="card">
-            <div class="">
-              <img src="/assets/perfil (1).jpeg" class="card-img" alt="...">
-      <div class="card-body">
-         <div class="card-img-overlay p-0 ms-3">
-        <h3 class="card-title">Leonardo Zamorano</h3>
-        <h5 class="">Co Fundador y Desarrollador</h5>
-      </div></div>
-            </div>
-            <div class="card-back">
-              <div class="card-body">
-                <h5 class="card-title">Detalles 3</h5>
-                <p class="card-text">Detalles adicionales de la tarjeta 3.</p>
-              </div>
-            </div>
-          </div>
-        </div>
+        <h3 class="card-title text-center"><b>Leonel Sanagua</b></h3>
+        <p class="card-text fs-5">Co-fundador y Desarrollador Web Full-stack.</p>
       </div>
     </div>
   </div>
+  <div class="col">
+    <div class="card h-100 d-flex align-items-center">
+      <img src="/assets/perfil (3).jpeg" class="card-img img-fluid" alt="...">
+      <div class="card-body">
+<h3 class="card-title text-center"><b>Franco Garcia</b></h3>
+        <p class="card-text fs-5">Co-fundador y Desarrollador Web Full-stack.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card h-100 d-flex align-items-center">
+      <img src="/assets/perfil (1).jpeg" class="card-img img-fluid" alt="...">
+      <div class="card-body">
+<h3 class="card-title text-center"><b>Leonardo Zamorano</b></h3>
+        <p class="card-text fs-5">Co-fundador y Desarrollador Web Full-stack.</p>
+      </div>
+    </div>
+  </div>
+  </div>
 <!-- -------------------- -->
-    <div class="px-0 suscribirse" data-bs-toggle="modal" data-bs-target="#modal">
-                <img src="../assets/suscribirse.png" alt="logo store" />
+<div class="container-fluid">
+<div class="px-0 suscribirse" data-bs-toggle="modal" data-bs-target="#modal">
+                <img src="/assets/suscribirse.png" alt="logo store" />
             </div>
             <div class="wsp">
                 <a href="https://wa.me/" target="_blank">
-                    <img src="../assets/wsp.png" alt="logo store" />
+                    <img src="/assets/wsp.png" alt="logo store" />
                 </a>
             </div>
              <div class="d-block d-md-block d-sm-none d-lg-none cartflot p-0 pe-6">
-                <img id="cartfloat" src="../assets/shopping-cart.png" alt="icono-cart">
+                <img id="cartfloat" src="/assets/shopping-cart.png" alt="icono-cart">
+            </div>
             </div>
     </main>
       <footer class="footer-container container-fluid color d-flex flex-column justify-content-between ">
